2018-02-26  Keith Marshall  <keith@users.osdn.me>

	Prepare and publish MinGW.org WSL-5.1 release.

	* All files (wsl-5.1-release): Tag assigned.

2018-02-24  Keith Marshall  <keith@users.osdn.me>

	Make <iptypes.h> header effectively self-contained.

	* include/iptypes.h: Assert copyright; tidy layout.
	Include <windef.h>; it is required for self-containment.
	(__need_time_t): Define for selective inclusion of <sys/types.h>
	(_BEGIN_C_DECLS, _END_C_DECLS): Use them as appropriate.
	(_WIN32_WINNT): Always compare it symbolically.
	(__dhcp_time_t): New temporary data type macro; define it...
	[_WIN64]: ...as equivalent to __time64_t, otherwise...
	[!_WIN64]: ...equivalent to __time32_t, and then...
	(struct _IP_ADAPTER_INFO): ...use it as the data type for...
	(LeaseObtained, LeaseExpires): ...these fields.

2017-12-20  Keith Marshall  <keith@users.osdn.me>

	Make <winreg.h> header effectively self-contained.

	* include/winreg.h: Include <winbase.h>, thus achieving effective
	self-containment; since this also indirectly includes <_mingw.h>,
	there is no longer any need to include it directly.

2017-12-20  Keith Marshall  <keith@users.osdn.me>

	Clean up, following issue [#2262] patch application.

	* include/winreg.h: Tidy layout; correct copyright assertion.
	(_BEGIN_C_DECLS, _END_C_DECLS): Use them, as appropriate.
	[UNICODE] (__AW): Do not use deleted macro; replace it with...
	[UNICODE] (__AW_ALIAS__): ...this, for conditional typedef mapping...
	[UNICODE] (VALENT, PVALENT): ...of these; similarly replace with...
	[UNICODE] (__AW_SUFFIXED__): ...this, to define function mappings...
	[UNICODE] (AbortSystemShutdown, InitiateSystemShutdown)
	(RegConnectRegistry, RegCreateKey, RegCreateKeyEx, RegDeleteKey)
	(RegDeleteValue, RegEnumKey, RegEnumKeyEx, RegEnumValue, RegLoadKey)
	(RegOpenKey, RegOpenKeyEx, RegQueryInfoKey, RegQueryMultipleValues)
	(RegQueryValue, RegQueryValueEx, RegReplaceKey, RegRestoreKey)