@@ -6,7 +6,7 @@
  * $Id$
  *
  * Written by Anders Norlander <anorland@hem2.passagen.se>
- * Copyright (C) 1998-2000, 2002-2004, 2006-2008, 2010, 2015,
+ * Copyright (C) 1998-2000, 2002-2004, 2006-2008, 2010, 2015, 2018,
  *   MinGW.org Project
  *
  *
@@ -172,16 +172,16 @@ _BEGIN_C_DECLS
 #define CALG_DSS_SIGN			(ALG_CLASS_SIGNATURE | ALG_TYPE_DSS | ALG_SID_DSS_ANY)
 #define CALG_RSA_KEYX			(ALG_CLASS_KEY_EXCHANGE | ALG_TYPE_RSA | ALG_SID_RSA_ANY)
 #define CALG_DES			(ALG_CLASS_DATA_ENCRYPT | ALG_TYPE_BLOCK | ALG_SID_DES)
+#define CALG_DESX			(ALG_CLASS_DATA_ENCRYPT | ALG_TYPE_BLOCK | ALG_SID_DESX)
 #define CALG_RC2			(ALG_CLASS_DATA_ENCRYPT | ALG_TYPE_BLOCK | ALG_SID_RC2)
 #define CALG_RC4			(ALG_CLASS_DATA_ENCRYPT | ALG_TYPE_STREAM | ALG_SID_RC4)
 #define CALG_SEAL			(ALG_CLASS_DATA_ENCRYPT | ALG_TYPE_STREAM | ALG_SID_SEAL)
 #define CALG_DH_EPHEM			(ALG_CLASS_KEY_EXCHANGE | ALG_TYPE_STREAM | ALG_TYPE_DSS | ALG_SID_DSS_DMS)
-#define CALG_DESX			(ALG_CLASS_DATA_ENCRYPT | ALG_TYPE_BLOCK | ALG_SID_DESX)
-#define CALG_TLS1PRF			(ALG_CLASS_DHASH | ALG_TYPE_ANY | ALG_SID_TLS1PRF)
+#define CALG_AES			(ALG_CLASS_DATA_ENCRYPT | ALG_TYPE_BLOCK | ALG_SID_AES)
 #define CALG_AES_128			(ALG_CLASS_DATA_ENCRYPT | ALG_TYPE_BLOCK | ALG_SID_AES_128)
 #define CALG_AES_192			(ALG_CLASS_DATA_ENCRYPT | ALG_TYPE_BLOCK | ALG_SID_AES_192)
 #define CALG_AES_256			(ALG_CLASS_DATA_ENCRYPT | ALG_TYPE_BLOCK | ALG_SID_AES_256)
-#define CALG_AES			(ALG_CLASS_DATA_ENCRYPT | ALG_TYPE_BLOCK | ALG_SID_AES)
+#define CALG_TLS1PRF			(ALG_CLASS_HASH | ALG_TYPE_ANY | ALG_SID_TLS1PRF)
 
 /* dwFlags definitions for CryptAcquireContext
  */
@@ -827,7 +827,7 @@ typedef PVOID HCERTSTORE;
 typedef PVOID HCRYPTMSG;
 typedef PVOID HCERTCHAINENGINE;
 
-typedef struct _CRYPTOAPI_BLOB
+struct _CRYPTOAPI_BLOB
 { DWORD 			 cbData;
   BYTE				*pbData;
 };
@@ -845,7 +845,7 @@ typedef struct _CRYPTOAPI_BLOB CRYPT_DIGEST_BLOB, *PCRYPT_DIGEST_BLOB;
 typedef struct _CRYPTOAPI_BLOB CRYPT_DER_BLOB, *PCRYPT_DER_BLOB;
 typedef struct _CRYPTOAPI_BLOB CRYPT_ATTR_BLOB, *PCRYPT_ATTR_BLOB;
 
-typedef struct _SSL_EXTRA_CERT_CHAIN_POLICY_PARA
+struct _SSL_EXTRA_CERT_CHAIN_POLICY_PARA
 { /* not described in SDK; has the same layout as HTTPSPolicyCallbackData
    */
   DWORD 			 cbStruct;
